Fixed overflow on y axis

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -2,7 +2,7 @@ body {
   margin: 0px;
   height: 100%;
   width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
   font-family: "Roboto", sans-serif;
 }
 
